fix: remove extra padding between links

--- a/static/js/page/index/kotlin-intro-section.scss
+++ b/static/js/page/index/kotlin-intro-section.scss
@@ -14,7 +14,6 @@
 }
 
 .kotlin-intro-section__link {
-  margin-left: var(--xs-space);
   color: #fff;
   &:hover {
     text-decoration: none;
